[package]
name = "second_lesson_experimnent"
version = "0.1.0"
authors = ["anton"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0.1"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm8-0" }